--- a/src/app/admin/layouts/sidebar/sidebar.component.html
+++ b/src/app/admin/layouts/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <aside>
     <div class="brand-wrapper">
-        <a href="#" class="brand text-center">
+        <a class="brand text-center" [routerLink]="commonServices.prepareRoute(appRoutes.Admin, adminRoutes.Dashboard)">
             <h1 class="flex items-center font-bold text-slate-300">
                 <span class="text-2xl mr-2 bg-green-600 w-8 h-8 rounded-md">I</span>
                 <span class="text-3xl tracking-widest">Insurance</span>
@@ -15,18 +15,18 @@
                 <span>Dashboard</span>
             </a>
         </li>
-        <li>
+        <!-- <li>
             <a class="menu-item" [routerLink]="commonServices.prepareRoute(appRoutes.Admin, adminRoutes.Events)"
                 routerLinkActive="active" ariaCurrentWhenActive="page">
                 <i class="bi bi-calendar4-event"></i>
                 <span>Events</span>
             </a>
-        </li>
+        </li> -->
         <li>
             <a href="javascript:void(0)" class="menu-item sub-menu" aria-expanded="false"
                 (click)="subMenuToggleHandler($event)">
                 <i class="bi bi-diagram-3"></i>
-                <span>UI Elements</span>
+                <span>{{ 'Insurance Management' }}</span>
             </a>
             <ul class="sub-menu-item">
                 <li>
@@ -36,7 +36,7 @@
                         <span>Alert</span>
                     </a>
                 </li>
-                <li>
+                <!-- <li>
                     <a class="menu-item"
                         [routerLink]="commonServices.prepareRoute(appRoutes.Admin, adminRoutes.Elements, elementRoutes.Tabs)"
                         routerLinkActive="active" ariaCurrentWhenActive="page">
@@ -56,24 +56,24 @@
                         routerLinkActive="active" ariaCurrentWhenActive="page">
                         <span>Buttons</span>
                     </a>
-                </li>
+                </li> -->
                 <li>
                     <a class="menu-item"
-                        [routerLink]="commonServices.prepareRoute(appRoutes.Admin, adminRoutes.Elements, elementRoutes.DataTable)"
+                        [routerLink]="commonServices.prepareRoute(appRoutes.Admin, adminRoutes.Elements, elementRoutes.InsuredClients)"
                         routerLinkActive="active" ariaCurrentWhenActive="page">
-                        <span>Data Table</span>
+                        <span>{{ "View Insured Clients" }}</span>
                     </a>
                 </li>
-                <li>
+                <!-- <li>
                     <a class="menu-item"
                         [routerLink]="commonServices.prepareRoute(appRoutes.Admin, adminRoutes.Elements, elementRoutes.Forms)"
                         routerLinkActive="active" ariaCurrentWhenActive="page">
                         <span>Forms</span>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </li>
-        <li>
+        <!-- <li>
             <a href="javascript:void(0)" class="menu-item sub-menu" aria-expanded="false"
                 (click)="subMenuToggleHandler($event)">
                 <i class="bi bi-sliders2-vertical"></i>
@@ -100,7 +100,7 @@
                     </a>
                 </li>
             </ul>
-        </li>
+        </li> -->
         <li>
             <a href="#" class="menu-item">
                 <i class="bi bi-box-arrow-right"></i>
