--- a/src/app/public/layouts/header/header.component.html
+++ b/src/app/public/layouts/header/header.component.html
@@ -2,13 +2,13 @@
    <nav class="container flex  items-center justify-between px-6 py-4 lg:px-8" aria-label="Global">
       <div class="flex lg:flex-1">
          <a href="#" class="-m-1.5 p-1.5">
-            <span class="sr-only">Your Company</span>
+            <span class="sr-only">{{ "EGPAF" }}</span>
             <img class="h-8 w-auto" src={{mainLogo}} alt="">
          </a>
       </div>
       <div class="flex lg:hidden">
          <button type="button" class="navbar-toggler">
-            <span class="sr-only">Open main menu</span>
+            <span class="sr-only">{{ "Open main menu" }}</span>
             <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                aria-hidden="true">
                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -16,15 +16,12 @@
          </button>
       </div>
       <div class="hidden lg:flex lg:gap-x-12">
-         <a [routerLink]="commonService.prepareRoute(publicRoutes.Home)"
-            class="text-sm font-semibold leading-6 text-gray-900">Home</a>
          <a [routerLink]="commonService.prepareRoute(appRoutes.Admin, adminRoutes.Dashboard)"
             class="text-sm font-semibold leading-6 text-gray-900">Dashboard</a>
       </div>
       <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-
-         <a [routerLink]="commonService.prepareRoute(publicRoutes.Signup)"
-            class="text-sm font-semibold leading-6 text-gray-900 mr-4">Signup</a>
+         <!-- <a [routerLink]="commonService.prepareRoute(publicRoutes.Signup)"
+            class="text-sm font-semibold leading-6 text-gray-900 mr-4">Signup</a> -->
          <a [routerLink]="commonService.prepareRoute(publicRoutes.Signin)"
             class="text-sm font-semibold leading-6 text-gray-900">Log in <span aria-hidden="true">&rarr;</span></a>
       </div>
@@ -37,10 +34,10 @@
          class="fixed inset-y-0 right-0 z-10 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
          <div class="flex items-center justify-between">
             <a href="#" class="-m-1.5 p-1.5">
-               <span class="sr-only">Your Company</span>
+               <span class="sr-only">{{ "EGPAF" }}</span>
                <img class="h-8 w-auto" src={{mainLogo}} alt="">
             </a>
-            <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
+            <button type="button" class="m-1.5 rounded-md p-2.5 text-gray-700">
                <span class="sr-only">Close menu</span>
                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                   aria-hidden="true">
@@ -51,18 +48,13 @@
          <div class="mt-6 flow-root">
             <div class="-my-6 divide-y divide-gray-500/10">
                <div class="space-y-2 py-6">
-                  <a href="#" class="">
-                     Features
-                  </a>
-                  <a href="#" class="nav-link">
-                     Marketplace
-                  </a>
-                  <a href="#" class="nav-link">
-                     Company
+                  <a href="#" class="nav-link" [routerLink]="commonService.prepareRoute(appRoutes.Admin, adminRoutes.Dashboard)">
+                     Dashboard
                   </a>
                </div>
                <div class="py-6">
-                  <a href="#" class="nav-link">Login
+                  <a href="#" class="nav-link" [routerLink]="commonService.prepareRoute(publicRoutes.Signin)">
+                     Login
                   </a>
                </div>
             </div>
