fix: add 404 resource not found page

--- a/src/app/admin/views/admin-page-not-found/admin-page-not-found.component.html
+++ b/src/app/admin/views/admin-page-not-found/admin-page-not-found.component.html
@@ -1,1 +1,6 @@
-<p>admin-page-not-found works!</p>
+<div class="min-h-screen w-full flex flex-col justify-center items-center bg-[#F1F5F9]">
+	<h1 class="text-9xl font-extrabold text-[#0F172B] tracking-widest">404</h1>
+	<div class="bg-[#FF6A3D] px-3 text-sm rounded rotate-12 absolute mt-5">
+		Resource Not Found
+	</div>
+</div>
