fix: change profile hover pointer to hand

--- a/src/app/admin/layouts/header/header.component.html
+++ b/src/app/admin/layouts/header/header.component.html
@@ -18,8 +18,8 @@
                         class="flex w-10 h-10 overflow-hidden rounded-full border-2 border-emerald-600 shadow">
                         <img src={{userOne}} alt="john doe" class="w-full object-cover">
                     </button>
-                    <div class="text-left ml-3" (click)="onClickProfile()">
-                        <p>johndoe</p>
+                    <div class="text-left ml-3 hover:cursor-pointer" (click)="onClickProfile()">
+                        <p>Van Damme</p>
                         <p class="text-light text-xs">Administrator</p>
                     </div>
                 </div>
