fix; Change View Bill hover pointer

--- a/src/app/shared/components/data-table/data-table.component.html
+++ b/src/app/shared/components/data-table/data-table.component.html
@@ -86,7 +86,7 @@
                            {{product?.insurance_number}}
                         </td>
                         <td class="ng-wind-data-item text-center">
-                           <a (click) = "onModalShow()" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">View Bill</a>
+                           <a (click) = "onModalShow()" class="font-medium text-blue-600 dark:text-blue-500 hover:underline hover:cursor-pointer">{{ "View Bill" }}</a>
                         </td>
                      </tr>
                      }
